--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,59 @@
-version: '3.8'
-
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8001:8001"
-    volumes:
-      - ./backend:/app
+  database:
+    image: postgres:latest
+    container_name: db
     environment:
-      - PYTHONUNBUFFERED=1
+      - POSTGRES_USER=${DATABASE_USERNAME}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_DB=${DATABASE_NAME}
+      - POSTGRES_HOST=${DATABASE_HOST}
+    command: postgres -p ${DATABASE_PORT}
+    volumes:
+      - ./backend/src/:/data
     networks:
-      - app-network
+      - internal-net
+    ports:
+      - "${DATABASE_PORT}:${DATABASE_PORT}"
+    frontend:
+      build:
+        context: ./frontend
+        dockerfile: Dockerfile
+      ports:
+        - "3000:3000"
+      volumes:
+        - ./frontend:/app
+        - /app/node_modules
+      environment:
+        - CHOKIDAR_USEPOLLING=true
+      networks:
+        - app-network
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    networks:
-      - app-network
-    depends_on:
-      - backend
+  # cache:
+  #   image: redis:latest
+  #   restart: always
+  #   ports:
+  #     - '${REDIS_PORT}:{REDIS_PORT}'
+  #   environment:
+  #     - REDIS_PASSWORD=${REDIS_PASSWORD}
+  #   command: 
+  #     - redis-server
+  #     - --save 20 1
+  #     - --loglevel warning
+  #     - --requirepass ${REDIS_PASSWORD}
+  #   volumes:
+  #     - cache:/data
+  # rabbitmq:
+  #   image: rabbitmq:4-management
+  #   hostname: rabbitmq
+  #   restart: always
+  #   environment:
+  #     - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+  #     - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
+  #     - RABBITMQ_PORT=${RABBITMQ_PORT}
+  #   ports:
+  #     - 15672:15672
+  #   networks:
+  #     - internal-net
 
 networks:
-  app-network:
-    driver: bridge
+  internal-net:
