--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "reactjs-popup": "^2.0.6",
     "swiper": "^11.2.5",
     "web-vitals": "^2.1.4"
   },
