--- a/backend/src/config/meta.yaml
+++ b/backend/src/config/meta.yaml
@@ -1,6 +1,6 @@
 cafe: 
   name: "Neuro"
-  tg_link: "https://www.figma.com/design/dFS3vG8wqJGe6wURNWP0Qx/Untitled?node-id=70-13&t=dBfULkzVN0n3MbQS-0"
+  tg_link: "https://t.me/neurocafebot"
   email: "info@cafe-neuro.ru"
   phone: "+7 (999) 999-99-99"
   longitude: 91.422759
@@ -56,3 +56,119 @@ interior:
   
   - id: 4
     img_link: https://storage.yandexcloud.net/memory-minder-images/interior/cafe-garderod-2.jpg
+  
+tables:
+  - id: 1
+    x: 9
+    y: 31
+    seats_count: 4
+
+  - id: 2
+    x: 9
+    y: 9
+    seats_count: 4
+
+  - id: 3
+    x: 26
+    y: 9
+    seats_count: 4
+
+  - id: 4
+    x: 47
+    y: 10
+    seats_count: 4
+
+  - id: 5
+    x: 47
+    y: 35
+    seats_count: 4
+
+  - id: 6
+    x: 47
+    y: 61
+    seats_count: 4
+
+  - id: 7
+    x: 47
+    y: 87
+    seats_count: 4
+
+  - id: 8
+    x: 65
+    y: 77
+    seats_count: 4
+
+  - id: 9
+    x: 65
+    y: 50
+    seats_count: 4
+
+  - id: 10
+    x: 65
+    y: 23
+    seats_count: 4
+
+  - id: 11
+    x: 87
+    y: 11
+    seats_count: 6
+
+  - id: 12
+    x: 87
+    y: 36
+    seats_count: 6
+
+  - id: 13
+    x: 87
+    y: 62
+    seats_count: 6
+
+  - id: 14
+    x: 87
+    y: 88
+    seats_count: 6
+
+  - id: 15
+    x: 12
+    y: 51
+    seats_count: 1
+
+  - id: 16
+    x: 12
+    y: 55
+    seats_count: 1
+
+  - id: 17
+    x: 12
+    y: 59
+    seats_count: 1
+
+  - id: 18
+    x: 12
+    y: 65
+    seats_count: 1
+
+  - id: 19
+    x: 12
+    y: 69
+    seats_count: 1
+
+  - id: 20
+    x: 12
+    y: 73
+    seats_count: 1
+
+  - id: 21
+    x: 12
+    y: 80
+    seats_count: 1
+
+  - id: 22
+    x: 12
+    y: 84
+    seats_count: 1
+
+  - id: 23
+    x: 12
+    y: 88
+    seats_count: 1
